--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,4 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22"
-    }
-}
-
-ext {
-    gdxVersion = '1.12.1'
-}
-
-subprojects {
-    repositories {
-        mavenCentral()
-    }
-}
-
-project(':core') {
-    apply plugin: 'org.jetbrains.kotlin.jvm'
-    dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.22"
-        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-    }
-    compileKotlin.kotlinOptions.jvmTarget = '1.8'
-    compileTestKotlin.kotlinOptions.jvmTarget = '1.8'
-}
-
-project(':desktop') {
-    apply plugin: 'org.jetbrains.kotlin.jvm'
-    dependencies {
-        implementation project(':core')
-        implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-    }
-    compileKotlin.kotlinOptions.jvmTarget = '1.8'
-    compileTestKotlin.kotlinOptions.jvmTarget = '1.8'
+plugins {
+    id 'com.android.application' version '8.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
 }
