--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,2 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        mavenCentral()
-    }
-}
-
-rootProject.name = 'rpg'
-include 'core', 'desktop'
+rootProject.name = "webview-game"
+include(":app")
